* devfs now uses the driver's name instead of its node_ref to see if it   already knows this driver. * This should also allow to have a driver in home/config/add-ons/... overlays   a driver with the same name in system/add-ons/... * This should also fix bug #1750.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23892 a95241bf-73f2-0310-859d-f6bbb57e9c96